--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "ts-node": "^10.9.2"
   },
   "dependencies": {
-    "discord.js": "^14.16.3"
+    "discord.js": "^14.16.3",
+    "moment": "^2.30.1",
+    "quick.db": "^9.1.7"
   }
 }
