--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ts-node": "^10.9.2"
   },
   "dependencies": {
+    "better-sqlite3": "^11.7.0",
     "discord.js": "^14.16.3",
     "moment": "^2.30.1",
     "quick.db": "^9.1.7"
